# chess

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  build-windows-in-linux.sh  cmake_install.cmake  main  main.c  makefile
cli/: ConsoleGame.h  Parser.h
gui/: GraphicalGame.c  GraphicalGame.h  GuiButton.h  GuiDifficultyWindow.h  GuiGameBoard.h  GuiGameModeWindow.h  GuiGameWindow.h  GuiHelpers.h  GuiSaveLoadWindow.c  GuiSaveLoadWindow.h  GuiSaveSlotButton.h  GuiUserColorWindow.h  GuiWelcomeWindow.h  GuiWidget.h  GuiWindow.h
saves/: slot1.txt
